[gd_scene load_steps=4 format=3 uid="uid://d3g2joxckwwvv"]

[ext_resource type="Script" path="res://prog_122d.gd" id="1_qvbyh"]
[ext_resource type="Theme" uid="uid://cu6rrjy4bj6v6" path="res://48px.tres" id="2_ees5v"]
[ext_resource type="Theme" uid="uid://c3r2mxqqbpx77" path="res://30px.tres" id="3_yef15"]

[node name="prog_122d" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qvbyh")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 46.0
offset_right = 1133.0
offset_bottom = 232.0
theme = ExtResource("2_ees5v")
text = "y = x  -  3x  -  93x  +  87x  +  1596x  -  1380x  -  2800"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 117.0
offset_top = 30.0
offset_right = 1119.0
offset_bottom = 78.0
theme = ExtResource("3_yef15")
text = "6             5                4                   3                         2"

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 185.0
offset_right = 676.0
offset_bottom = 613.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 730.0
offset_top = 206.0
offset_right = 1093.0
offset_bottom = 322.0
theme = ExtResource("2_ees5v")
text = "Show Answer"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 730.0
offset_top = 342.0
offset_right = 1093.0
offset_bottom = 458.0
theme = ExtResource("2_ees5v")
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 730.0
offset_top = 478.0
offset_right = 1093.0
offset_bottom = 594.0
theme = ExtResource("2_ees5v")
text = "Quit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
